syntax = "proto3";

option csharp_namespace = "GrpcServer";

package train;

service Train {
    rpc GetCountPeople(Request) returns (ResponseCountePeople);
    rpc GetCountBag(Request) returns (ResponseCountBag);
}

message Request {
    
}

message ResponseCountePeople {
    int32 CountPeople = 1;
}

message ResponseCountBag {
    int32 CountBag = 1;
}